# old_finger_promax

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/Adafruit_Fingerprint/: CMakeLists.txt
components/Adafruit_Fingerprint/examples/show_fingerprint_templates/: show_fingerprint_templates.ino
components/Adafruit_Fingerprint/src/: Adafruit_Fingerprint.cpp  Adafruit_Fingerprint.h
components/ESP32Time/: CMakeLists.txt
components/I2C_BM8563_RTC/: CMakeLists.txt
components/MFRC522_I2C/: CMakeLists.txt
components/MFRC522_I2C/ex/: test.cpp
components/MFRC522_I2C/src/: MFRC522_I2C.cpp  MFRC522_I2C.h
components/can_common/: CMakeLists.txt
components/chmorgan__esp-audio-player/: .component_hash  idf_component.yml
components/chmorgan__esp-audio-player/test/: audio_player_test.c
components/esp32_can/: CMakeLists.txt
components/esp32_can/src/: mcp2515.cpp
main/: CMakeLists.txt  DEV_PIN.h  access_task.cpp  app_test.cpp  audio_task.c  blackboard.cpp  blackboard.h  blackboard_c.c  blackboard_c.h  main.cpp  myutil.cpp  myutil.h  safeblet_task.cpp  task_ble.cpp  tasks.h
main/app/: FM24CLXX.cpp  FM24CLXX.h  app_audio.cpp  app_ble.cpp  app_can.cpp  app_face.cpp  app_finger.cpp  app_ota.cpp  app_rfid.cpp  app_rtc.cpp  app_time.cpp  audio_task.c  blackboard.cpp  blackboard.h  cmd_table.h  t_otac.c  zc_face.cpp  zc_face.h
main/app/util/: PubSubBroker.cpp  PubSubBroker.h  myutil.cpp  myutil.h
